# django-urlshortner

./: .gitignore  .gitpod.yml  LICENSE  README.md  README.rst  setup.cfg
urlshortner/: admin.py  apps.py  models.py  urls.py  views.py
urlshortner/migrations/: 0001_initial.py
urlshortner/utils/: __init__.py  http.py  urls.py
