[metadata]
name = django-urlshortner
version = 0.0.1
description = A Django app that provides utils to build a custom URL shortener.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django, urlshortener, web
url = https://github.com/jim-junior/django-urlshortner
author = Beingana Jim Junior
author_email = jimjunior854@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0  # Replace "X.Y" as appropriate